gccida/g3/parse_input_constraint
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_input_constraint/src/stmt.c:1949:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v14] & 0x88) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_input_constraint/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_input_constraint/src/obj/stmt.o] Error 1
